--- a/fastjoke/jokeFeed/templates/base.html
+++ b/fastjoke/jokeFeed/templates/base.html
@@ -17,6 +17,43 @@
 </head>
 
 <body>
+	<!--<nav id="headbar" class="navbar navbar-inverse navbar-default navbar-fixed-top">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+			  <span class="sr-only">Toggle navigation</span>
+			  <span class="icon-bar"></span>
+			  <span class="icon-bar"></span>
+			  <span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="{% url 'jokeFeed:index' %}">makemelaugh</a>
+		</div>
+		
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="{% url 'jokeFeed:index' %}">home</a></li>
+				<li><a href="#">about</a></li>
+			</ul>
+			
+			<ul class="nav navbar-nav navbar-right">
+				{% if user.is_authenticated %}
+					<li><a href="#">{{ user.first_name }}'s Profile</a></li>
+					<li><a href="/accounts/logout">logout</a></li>
+					
+				{% else %}
+					<li><a href="/accounts/login">Log in</a></li>
+					<li><a href="/submit">Submit Joke</a></li>
+				{% endif %}
+			</ul>
+		</div>
+	</nav>
+
+
+    <div id="content">
+  #INSERT CONTENT BLOCK    
+    </div>-->
+	
+	
+	
 	<a href="/">Home</a>
 	{% if user.is_authenticated %}
 		<p>{{ user.first_name }} {{ user.last_name}}'s Profile</p>
