--- a/fastjoke/jokeFeed/templates/base.html
+++ b/fastjoke/jokeFeed/templates/base.html
@@ -56,7 +56,7 @@
 	
 	<a href="/">Home</a>
 	{% if user.is_authenticated %}
-		<p>{{ user.first_name }} {{ user.last_name}}'s Profile</p>
+		<p>{{ user.username}}'s Profile</p>
 		<a href="/accounts/logout">logout</a>
 		
 	{% else %}
