--- a/fastjoke/jokeFeed/templates/registration/add_user.html
+++ b/fastjoke/jokeFeed/templates/registration/add_user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}babble-Create Account{% endblock %}
+{% block title %}INSERTNAME-Create Account{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -8,25 +8,25 @@
 	
 	<form class="form-horizontal" role="form" action="{% url 'add_user_add' %}" method="post">
 		{% csrf_token %}
-		<div class="form-group">
+		<!--<div class="form-group">
 			<label for="first_name" class="col-lg-2 control-label">First Name:</label>
 			<div class="col-lg-6"><input class="form-control" id="first_name" name="first_name" type="text"/></div>
 		</div>
-			
+				
 		<div class="form-group">
 			<label for="last_name" class="col-lg-2 control-label">Last Name:</label>
 				<div class="col-lg-6"><input class="form-control" id="last_name" name="last_name" type="text"/></div>
-		</div>
+		</div>-->
 		
 		<div class="form-group">
 			<label for="username" class="col-lg-2 control-label">Username:</label>
 				<div class="col-lg-6"><input class="form-control" id="uname" name="uname" type="text"/></div>
 		</div>
 
-		<div class="form-group">
+		<!--<div class="form-group">
 			<label for="email" class="col-lg-2 control-label">Email:</label>
 				<div class="col-lg-6"><input class="form-control" id="email" name="email" type="text"/></div>
-		</div>
+		</div>-->
 		
 		<div class="form-group">
 			<label for="pwd" class="col-lg-2 control-label">Password:</label>
