--- a/fastjoke/jokeFeed/templates/registration/login.html
+++ b/fastjoke/jokeFeed/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}babble-login{% endblock %}
+{% block title %}CHANGENAME-login{% endblock %}
 
 {% block content %}
 <div class="container">
