--- a/fastjoke/jokeFeed/templates/jokeFeed/submit.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/submit.html
@@ -2,4 +2,20 @@
 
 {% block title %}submit joke{% endblock %}
 
-{% block content %} {% endblock %}
+{% block content %} 
+<div class="container">
+	<div class='page-header'><h1><strong>New Users</strong><br> <small>create your own account</small></h1></div>
+	
+	<form class="form-horizontal" role="form" action="{% url 'jokeFeed:submit_submit' %}" method="post">
+		{% csrf_token %}
+		<div class="form-group">
+			<label for="pwd" class="col-lg-2 control-label">Joke:</label>
+				<div class="col-lg-6"><input class="form-control" id="joke" name="joke" type="text"/></div>
+		</div>
+		
+		<div class="form-group">
+			<label class='control-label'><button type="submit" class="btn btn-primary" name="submit_joke_form">Submit</button></label>
+		</div>
+	</form>
+</div>
+{% endblock %}
