--- a/fastjoke/jokeFeed/templates/base.html
+++ b/fastjoke/jokeFeed/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<!--<nav id="headbar" class="navbar navbar-inverse navbar-default navbar-fixed-top">
+	<nav id="headbar" class="navbar navbar-inverse navbar-default navbar-fixed-top">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 			  <span class="sr-only">Toggle navigation</span>
@@ -30,13 +30,12 @@
 		
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="{% url 'jokeFeed:index' %}">home</a></li>
 				<li><a href="#">about</a></li>
 			</ul>
 			
 			<ul class="nav navbar-nav navbar-right">
 				{% if user.is_authenticated %}
-					<li><a href="#">{{ user.first_name }}'s Profile</a></li>
+					<li><a href="/submit">Submit Joke</a></li>
 					<li><a href="/accounts/logout">logout</a></li>
 					
 				{% else %}
@@ -49,12 +48,12 @@
 
 
     <div id="content">
-  #INSERT CONTENT BLOCK    
-    </div>-->
+  {% block content %}{% endblock %} 
+    </div>
 	
 	
 	
-	<a href="/">Home</a>
+	<!--<a href="/">Home</a>
 	{% if user.is_authenticated %}
 		<p>{{ user.username}}'s Profile</p>
 		<a href="/accounts/logout">logout</a>
@@ -66,7 +65,7 @@
 	<p>Link to add joke</p>
 
     <div id="content">
-        {% block content %}{% endblock %}
-    </div>
+        #INSER CONTENT BLOCK
+    </div>-->
 </body>
 </html>
