styling and tweaks
hi.

--- a/fastjoke/jokeFeed/templates/base.html
+++ b/fastjoke/jokeFeed/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<nav id="headbar" class="navbar navbar-inverse navbar-default navbar-fixed-top">
+	<nav id="headbar" class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 			  <span class="sr-only">Toggle navigation</span>
@@ -25,13 +25,13 @@
 			  <span class="icon-bar"></span>
 			  <span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{% url 'jokeFeed:index' %}">makemelaugh</a>
+			<a class="navbar-brand" href="{% url 'jokeFeed:index' %}">lolsicles</a>
 		</div>
 		
 		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
+			<!--<ul class="nav navbar-nav">
 				<li><a href="#">about</a></li>
-			</ul>
+			</ul>-->
 			
 			<ul class="nav navbar-nav navbar-right">
 				{% if user.is_authenticated %}
