--- a/fastjoke/jokeFeed/templates/jokeFeed/detail.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/detail.html
@@ -4,13 +4,17 @@
 
 {% block content %}
 <div class="container">
-<p>{{ current_joke.text }}</p> 
-
-<!--voting-->
-<a href="/{{ current_joke.id }}/up"><button class="btn btn-primary"> <span class="glyphicon glyphicon-thumbs-up"></span></button></a>
-<a href="/{{ current_joke.id }}/down"><button class="btn btn-primary"> <span class="glyphicon glyphicon-thumbs-down"></span></button></a>
-
-
+	<div class="jumbotron">
+		<div class="container">
+			<p>hi</p>
+			<br>
+			<h1>{{ current_joke.text }}</h1>
+			<!--voting-->
+			<div align='center'>
+				<a href="/{{ current_joke.id }}/up"><button class="btn btn-primary btn-lg"> <span class="glyphicon glyphicon-thumbs-up"></span></button></a>
+				<a href="/{{ current_joke.id }}/down"><button class="btn btn-primary btn-lg"> <span class="glyphicon glyphicon-thumbs-down"></span></button></a>
+			</div>
+		</div>
 
 </div>
 {% endblock %}
