favorites and numjokes posted
works.

--- a/fastjoke/jokeFeed/templates/base.html
+++ b/fastjoke/jokeFeed/templates/base.html
@@ -39,6 +39,7 @@
 					<li><a href="/accounts/logout">logout</a></li>
 					
 				{% else %}
+					<li><a href="/accounts/add">Create Account</a></li>
 					<li><a href="/accounts/login">Log in</a></li>
 					<li><a href="/submit">Submit Joke</a></li>
 				{% endif %}
