--- a/fastjoke/jokeFeed/templates/jokeFeed/submit.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/submit.html
@@ -9,8 +9,8 @@
 	<form class="form-horizontal" role="form" action="{% url 'jokeFeed:submit_submit' %}" method="post">
 		{% csrf_token %}
 		<div class="form-group">
-			<label for="pwd" class="col-lg-2 control-label">Joke:</label>
-				<div class="col-lg-6"><input class="form-control" id="joke" name="joke" type="text"/></div>
+			<label class="col-lg-2 control-label">Joke:</label>
+				<div class="col-lg-8"><textarea class="form-control" id="joke" name="joke" rows="4"></textarea></div>
 		</div>
 		
 		<div class="form-group">
