--- a/fastjoke/jokeFeed/templates/registration/add_user.html
+++ b/fastjoke/jokeFeed/templates/registration/add_user.html
@@ -6,6 +6,11 @@
 <div class="container">
 	<div class='page-header'><h1><strong>New Users</strong><br> <small>create your own account</small></h1></div>
 	
+	{% if error %}
+		<p class='text-danger'><strong>Sorry, this username already exists. Please create another one.</strong></p>
+	{% else %}	
+	{% endif %}
+	<br/>
 	<form class="form-horizontal" role="form" action="{% url 'add_user_add' %}" method="post">
 		{% csrf_token %}
 		<!--<div class="form-group">
@@ -18,24 +23,39 @@
 				<div class="col-lg-6"><input class="form-control" id="last_name" name="last_name" type="text"/></div>
 		</div>-->
 		
-		<div class="form-group">
-			<label for="username" class="col-lg-2 control-label">Username:</label>
+		{% if error %}
+			<div class="form-group has-error">
+				<label for="username" class="col-lg-2 control-label">Username:</label>
 				<div class="col-lg-6"><input class="form-control" id="uname" name="uname" type="text"/></div>
-		</div>
-
+			</div>
+		{% else %}
+			<div class="form-group">
+				<label for="username" class="col-lg-2 control-label">Username:</label>
+				<div class="col-lg-6"><input class="form-control" id="uname" name="uname" type="text"/></div>
+			</div>
+		{% endif %}
+		
 		<!--<div class="form-group">
 			<label for="email" class="col-lg-2 control-label">Email:</label>
 				<div class="col-lg-6"><input class="form-control" id="email" name="email" type="text"/></div>
 		</div>-->
 		
-		<div class="form-group">
-			<label for="pwd" class="col-lg-2 control-label">Password:</label>
+		{% if error %}
+			<div class="form-group has-error">
+				<label for="pwd" class="col-lg-2 control-label">Password:</label>
 				<div class="col-lg-6"><input class="form-control" id="pwd" name="pwd" type="password"/></div>
-		</div>
+			</div>
+		{% else %}
+			<div class="form-group">
+				<label for="pwd" class="col-lg-2 control-label">Password:</label>
+				<div class="col-lg-6"><input class="form-control" id="pwd" name="pwd" type="password"/></div>
+			</div>
+		{% endif %}
 		
 		<div class="form-group">
 			<label class='control-label'><button type="submit" class="btn btn-primary" name="submit_user_form">Join!</button></label>
 		</div>
 	</form>
+	
 </div>
 {% endblock %}
