some shit, brah
hi.

--- a/fastjoke/jokeFeed/templates/jokeFeed/index.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/index.html
@@ -3,12 +3,78 @@
 {% block title %}FAHKING TITLE{% endblock %}
 
 {% block content %}
-<div class="container">
-<p>Joke!</p>
+<div class='landingPage'>
+	<div class="container">
+		<div class='right landingPageCreate'>
+			<div class='page-header'><h3><strong>create an account</strong><br><small>Already have one? Login <a href="/accounts/login">here</a></small></h3></div>
+	
+				{% if error %}
+					<p class='text-danger'><strong>Sorry, this username already exists. Please create another one.</strong></p>
+				{% else %}	
+				{% endif %}
+				<br/>
+				<form class="form-horizontal" role="form" action="{% url 'add_user_add' %}" method="post">
+					{% csrf_token %}
+					
+					
+					{% if error %}
+						<div class="form-group has-error">
+							<label for="username" class="col-md-1 control-label">Username:</label>
+							<div class="col-md-3"><input class="form-control" id="uname" name="uname" type="text"/></div>
+						</div>
+					{% else %}
+						<div class="form-group">
+							<label for="username" class="col-md-1 control-label">Username:</label>
+							<div class="col-md-3"><input class="form-control" id="uname" name="uname" type="text"/></div>
+						</div>
+					{% endif %}
+					
+					<!--<div class="form-group">
+						<label for="email" class="col-lg-2 control-label">Email:</label>
+							<div class="col-lg-6"><input class="form-control" id="email" name="email" type="text"/></div>
+					</div>-->
+					
+					{% if error %}
+						<div class="form-group has-error">
+							<label for="pwd" class="col-md-1 control-label">Password:</label>
+							<div class="col-md-3"><input class="form-control" id="pwd" name="pwd" type="password"/></div>
+						</div>
+					{% else %}
+						<div class="form-group">
+							<label for="pwd" class="col-md-1 control-label">Password:</label>
+							<div class="col-md-3"><input class="form-control" id="pwd" name="pwd" type="password"/></div>
+						</div>
+					{% endif %}
+					
+					<div class="form-group">
+						<label class='control-label'><button type="submit" class="btn btn-primary" name="submit_user_form">Join!</button></label>
+					</div>
+				</form>
+				
+		</div>
+		
+		<div float='left'>
+			<div class='transparentJoke'>
+				<p>It's simple. You see a joke. Decide if you like it or dislike. Is it one of the funniest jokes you've seen? share it, star it, save it for later. Then, it's onto the next one. </p>
+				<p>Here's to time well spent.</p>
+				<p><small>Team lolsicles</small></p>
+			</div>
+			<br/><br/>
+			
+			<div class='transparentJoke'>Top 5 jokes right now:</div>
+			<br/>
+			{% for joke in top_five %}
+				<div class="transparentJoke">
+					<p>{{ joke }} </p>
+				</div>
+				<br/>
+		</div>
+	</div>
 
-<p>Up</p>
-<p>Down</p>
+	<p>Up</p>
+	<p>Down</p>
 
 
+	</div>
 </div>
 {% endblock %}
