See other people's profile

--- a/fastjoke/jokeFeed/templates/base.html
+++ b/fastjoke/jokeFeed/templates/base.html
@@ -36,8 +36,8 @@
 			<ul class="nav navbar-nav navbar-right">
 				{% if user.is_authenticated %}
 					<li><a href="/submit">Submit Joke</a></li>
-					<li><a href="/usr/fav">Favorites</a></li>
-					<li><a href="/usr/profile">Profile</a></li>
+					<li><a href="/user/fav">Favorites</a></li>
+					<li><a href="/user/">Profile</a></li>
 					<li><a href="/accounts/logout">logout</a></li>
 					
 				{% else %}
