--- a/fastjoke/jokeFeed/templates/base.html
+++ b/fastjoke/jokeFeed/templates/base.html
@@ -38,13 +38,14 @@
 					<li><a href="/submit">Submit Joke</a></li>
 					<li><a href="/user/fav">Favorites</a></li>
 					<li><a href="/user/">Profile</a></li>
-					<li><a href="/accounts/logout">logout</a></li>
+					<li><a href="/accounts/logout">Log out</a></li>
 					
 				{% else %}
 					<li><a href="/accounts/add">Create Account</a></li>
 					<li><a href="/accounts/login">Log in</a></li>
 					<li><a href="/submit">Submit Joke</a></li>
 				{% endif %}
+					<li><a href="/feedback">Feedback</a></li>
 			</ul>
 		</div>
 	</nav>
