--- a/fastjoke/jokeFeed/templates/jokeFeed/index.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}FAHKING TITLE{% endblock %}
+{% block title %}Fast Joke{% endblock %}
 
 {% block content %}
 <div class='landingPage'>
