--- a/fastjoke/jokeFeed/templates/jokeFeed/detail.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/detail.html
@@ -3,13 +3,6 @@
 {% block title %}Haha Funny Joke Lah!{% endblock %}
 
 {% block content %}
-	<div class='right keyboardShortcuts'>
-	<h5>Keyboard shortcuts:</h1>
-	<ul>
-		<li>'J' : Good joke</li>
-		<li>'K' : Lame joke</li>
-		<li>'U' : Favorite this joke</li>
-	</div>
 <div class="container">
 
 	<div class="jumbotron">
@@ -37,8 +30,16 @@
 			<br>
 			</div>
 		</div>
+	<div class='right keyboardShortcuts'>
+	<ul class='list-inline'>
+		<li>Keyboard shortcuts:</li>
+		<li>'J' : Good joke</li>
+		<li>'K' : Lame joke</li>
+		<li>'U' : Favorite this joke</li>
+	</div>
 
 </div>
+
 
 <script>
 $(document).ready(function() {
