--- a/fastjoke/jokeFeed/templates/jokeFeed/detail.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/detail.html
@@ -27,9 +27,10 @@
 					</button>
 				</a>
 			</div>
-			<br>
-			</div>
+			<br></br/><br/>
+			<h3 class=''><small>Submitted by: <a href='/user/{{creator}}'>{{creator}}</a></small></h3>
 		</div>
+	</div>
 	<div class='right keyboardShortcuts'>
 	<ul class='list-inline'>
 		<li>Keyboard shortcuts:</li>
