--- a/fastjoke/jokeFeed/templates/jokeFeed/submit.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/submit.html
@@ -4,18 +4,22 @@
 
 {% block content %} 
 <div class="container">
-	<div class='page-header'><h1><strong>{{user.username}}</strong><br> <small>submit a joke!</small></h1></div>
-	
-	<form class="form-horizontal" role="form" action="{% url 'jokeFeed:submit_submit' %}" method="post">
-		{% csrf_token %}
-		<div class="form-group">
-			<label class="col-lg-2 control-label">Joke:</label>
-				<div class="col-lg-8"><textarea class="form-control" id="joke" name="joke" rows="4"></textarea></div>
+	<div class="jumbotron">
+		<div class="container">
+			<h1><strong>Submit a joke!</strong></h1><br/><br/>
+			
+			<form class="form-horizontal" role="form" action="{% url 'jokeFeed:submit_submit' %}" method="post">
+				{% csrf_token %}
+				<div class="form-group">
+					<label class="col-lg-2 control-label">Joke:</label>
+						<div class="col-lg-8"><textarea class="form-control" id="joke" name="joke" rows="4"></textarea></div>
+				</div>
+				
+				<div class="form-group">
+					<label class='control-label'><button type="submit" class="btn btn-primary" name="submit_joke_form">Submit</button></label>
+				</div>
+			</form>
 		</div>
-		
-		<div class="form-group">
-			<label class='control-label'><button type="submit" class="btn btn-primary" name="submit_joke_form">Submit</button></label>
-		</div>
-	</form>
+	</div>
 </div>
 {% endblock %}
