--- a/fastjoke/jokeFeed/templates/jokeFeed/profile.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/profile.html
@@ -6,7 +6,8 @@
 <div class="container">
 	<div class="jumbotron">
 		<div class="container">
-		<h1>{{ username }}</h1>
+		<h1>{{ username }} - {{ total_score }}</h1>
+		</br>
 			<ul class="list-unstyled">
 			{% for joke in joke_list %}
 				<li class="padded-list">
