--- a/fastjoke/jokeFeed/templates/jokeFeed/submit.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/submit.html
@@ -6,7 +6,7 @@
 <div class="container">
 	<div class="jumbotron">
 		<div class="container">
-			<h1><strong>Submit a joke!</strong></h1><br/><br/>
+			<h1>Submit a Joke</h1><br/><br/>
 			
 			<form class="form-horizontal" role="form" action="{% url 'jokeFeed:submit_submit' %}" method="post">
 				{% csrf_token %}
