--- a/fastjoke/jokeFeed/templates/jokeFeed/fav.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/fav.html
@@ -17,7 +17,7 @@
 								<span class="glyphicon glyphicon-minus-sign"></span>
 							</button>
 						</a>
-						<a href="/{{fav_joke.id}}">{{ fav_joke.text }}</a>
+						<a style="color:#ffffff;" href="/{{fav_joke.id}}">{{ fav_joke.text }}</a>
 
 					</li>
 				{% endfor %}
