--- a/fastjoke/jokeFeed/templates/jokeFeed/profile.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/profile.html
@@ -13,7 +13,7 @@
 			<tbody>
 				<tr<th><td><strong>Score</strong></td><td><strong>Joke</strong></td></th></tr>
 				{% for joke in joke_list %}
-				<tr><td>{{ joke.score }}</td><td><a href="/{{joke.id}}">{{ joke.text }}</a></td></tr>
+				<tr><td>{{ joke.score }}</td><td><a style="color:#ffffff;"href="/{{joke.id}}">{{ joke.text }}</a></td></tr>
 			
 				{% endfor %}
 			</tbody>
