some more updates.
hi.

--- a/fastjoke/jokeFeed/templates/jokeFeed/index.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/index.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <div class='landingPage'>
+	
 	<div class='right landingPageCreate'>
 		<div><h3><strong>create an account</strong><br><small>Already have one? Login <a href="/accounts/login">here</a></small></h3></div>
 			{% if error %}
@@ -55,7 +56,7 @@
 			<div class='transparentJoke'>
 				<div><h1><strong>It's simple. See joke. Vote.</strong><br><small>Then, onto the next one. Here's to time well spent.</small></h1></div>
 			</div>
-			<br/><br/>
+			<br/><br/><br/><br/>
 			
 			<div class='transparentJoke1'><h2 style='color:#ffffff;'>Top jokes right now:</h2>
 			
@@ -67,9 +68,10 @@
 			</div>
 		</div>
 	</div>
-
-
-
-	</div>
 </div>
+
+<div class='purpleFiller'>
+
+</div>
+
 {% endblock %}
