--- a/fastjoke/jokeFeed/templates/registration/add_user.html
+++ b/fastjoke/jokeFeed/templates/registration/add_user.html
@@ -61,6 +61,8 @@
 				</div>
 			</form>
 			
+			<p align='right' class='text-muted'> Already have an account?<br/>
+			<a href='/accounts/login'><strong>Sign in!</strong></a></p>
 		</div>
 	</div>
 </div>
