I hope this took out views.py

--- a/fastjoke/jokeFeed/templates/jokeFeed/index.html
+++ b/fastjoke/jokeFeed/templates/jokeFeed/index.html
@@ -60,7 +60,7 @@
 			
 			<div class='transparentJoke1'><h2 style='color:#ffffff;'>Top jokes right now:</h2>
 			
-				<div lass='list-group'>
+				<div class='list-group'>
 					{% for joke in top_five %}
 						<a class='list-group-item' href='#'>{{ joke }}</a>
 					{% endfor %}
