--- a/fastjoke/jokeFeed/templates/base.html
+++ b/fastjoke/jokeFeed/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<!-- jquery -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
+	<script src="{{STATIC_URL}}jquery.js"> </script>
 	
 	<!-- bootstrap -->
 	{% load staticfiles %}
