--- a/fastjoke/jokeFeed/templates/registration/add_user.html
+++ b/fastjoke/jokeFeed/templates/registration/add_user.html
@@ -15,6 +15,8 @@
 			{% else %}	
 			{% endif %}
 			<br/>
+			
+			{% autoescape on %}
 			<form class="form-horizontal" role="form" action="{% url 'add_user_add' %}" method="post">
 				{% csrf_token %}
 				<!--<div class="form-group">
@@ -60,6 +62,7 @@
 					<label class='control-label'><button type="submit" class="btn btn-primary" name="submit_user_form">Join!</button></label>
 				</div>
 			</form>
+			{% endautoescape %}
 			
 			<p align='right' class='text-muted'> Already have an account?<br/>
 			<a href='/accounts/login'><strong>Sign in!</strong></a></p>
